[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "muplr"
version = "2.1.1"
description = "mupl: Bulk MangaDex Upload Tool"
readme = "README.md"

authors = [
    { name = "ArdaxHz", email = "70710586+ArdaxHz@users.noreply.github.com" }
]

license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "natsort",
    "packaging",
    "Pillow",
    "tqdm",
]
[project.urls]
"Homepage" = "https://github.com/ArdaxHz/mupl"
"Repository" = "https://github.com/ArdaxHz/mupl"
"Bug Tracker" = "https://github.com/ArdaxHz/mupl/issues"

[tool.setuptools]
package-dir = {"" = "mupl"}

[tool.setuptools.packages.find]
where = ["mupl"]
